--- a/MovieSPA/index.html
+++ b/MovieSPA/index.html
@@ -22,6 +22,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/MovieSpaKSU/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
