--- a/MovieSPA/actor.html
+++ b/MovieSPA/actor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actor Details</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/MovieSPAKSU/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
         $(document).ready(function () {
             const actorId = localStorage.getItem('actorId');
             if (!actorId) {
-                window.location.href = 'index.html';
+                window.location.href = '/MovieSPAKSU/index.html';
                 return;
             }
 
@@ -36,7 +36,7 @@
             });
 
             $('#back-button').on('click', function () {
-                window.location.href = 'index.html';
+                window.location.href = '/MovieSPAKSU/index.html';
             });
         });
 
