--- a/MovieSPA/actor.html
+++ b/MovieSPA/actor.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actor Details</title>
+    <title>Blackwell KSU Movie Search</title>
     <link rel="stylesheet" href="/MovieSPAKSU/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div id="app" class="container mt-4">
-        <button id="back-button" class="btn btn-secondary mb-4">Back to Main</button>
-        <div id="actor-details"></div>
+        <h1 class="text-center">Blackwell KSU Movie Search</h1>
+        <!-- Search Section -->
+        <div class="form-group">
+            <label for="movieTitle">Enter Movie Title:</label>
+            <input type="text" id="movieTitle" class="form-control">
+        </div>
+        <button id="searchButton" class="btn btn-primary">Search</button>
+
+        <!-- Results Section -->
+        <div id="results" class="mt-4"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
@@ -18,36 +26,53 @@
         const BASE_URL = 'https://api.themoviedb.org/3';
 
         $(document).ready(function () {
-            const actorId = localStorage.getItem('actorId');
-            if (!actorId) {
-                window.location.href = '/MovieSPAKSU/index.html';
-                return;
-            }
-
-            $.ajax({
-                url: `${BASE_URL}/person/${actorId}`,
-                data: { api_key: API_KEY },
-                success: function (response) {
-                    displayActorInfo(response);
-                },
-                error: function (err) {
-                    console.error('Error fetching actor details:', err);
+            $('#searchButton').on('click', function () {
+                const movieTitle = $('#movieTitle').val();
+                if (!movieTitle) {
+                    alert('Please enter a movie title.');
+                    return;
                 }
-            });
 
-            $('#back-button').on('click', function () {
-                window.location.href = '/MovieSPAKSU/index.html';
+                $.ajax({
+                    url: `${BASE_URL}/search/movie`,
+                    data: { api_key: API_KEY, query: movieTitle },
+                    success: function (response) {
+                        displayMovies(response.results);
+                    },
+                    error: function (err) {
+                        console.error('Error fetching movies:', err);
+                    }
+                });
             });
         });
 
-        function displayActorInfo(actor) {
-            const actorDetails = `
-                <h2>${actor.name}</h2>
-                <img src="https://image.tmdb.org/t/p/w300${actor.profile_path || 'assets/no-image-available.png'}" alt="${actor.name}" style="border-radius: 5px; margin-bottom: 10px;">
-                <p><strong>Birthday:</strong> ${actor.birthday || 'N/A'}</p>
-                <p><strong>Biography:</strong> ${actor.biography || 'No biography available.'}</p>
-            `;
-            $('#actor-details').html(actorDetails);
+        function displayMovies(movies) {
+            const resultsContainer = $('#results');
+            resultsContainer.empty();
+
+            if (!movies.length) {
+                resultsContainer.html('<p class="text-danger">No movies found.</p>');
+                return;
+            }
+
+            movies.forEach(movie => {
+                const movieCard = `
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">${movie.title}</h5>
+                            <p class="card-text">${movie.overview || 'No description available.'}</p>
+                            <button class="btn btn-primary view-actors" data-id="${movie.id}">View Actors</button>
+                        </div>
+                    </div>
+                `;
+                resultsContainer.append(movieCard);
+            });
+
+            $('.view-actors').on('click', function () {
+                const movieId = $(this).data('id');
+                localStorage.setItem('movieId', movieId);
+                window.location.href = '/MovieSPAKSU/actor.html';
+            });
         }
     </script>
 </body>
