--- a/MovieSPA/index.html
+++ b/MovieSPA/index.html
@@ -4,24 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackwell KSU Movie Search</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/MovieSPAKSU/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div id="app" class="container mt-4">
         <h1 class="text-center">Blackwell KSU Movie Search</h1>
         <!-- Search Section -->
-        <div id="search-section" class="my-3">
-            <input type="text" id="search-bar" class="form-control" placeholder="Search movies or TV shows">
-            <button id="search-button" class="btn btn-primary mt-2">Search</button>
+        <div class="form-group">
+            <label for="movieTitle">Enter Movie Title:</label>
+            <input type="text" id="movieTitle" class="form-control">
         </div>
-        <!-- Results Section -->
-        <div id="results-section" class="my-3"></div>
-        <!-- Details Section -->
-        <div id="details-section" class="my-3"></div>
-    </div>
+        <button id="searchButton" class="btn btn-primary">Search</button>
 
+        <!-- Results Section -->
+        <div id="results" class="mt-4"></div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/script.js"></script>
+    <script>
+        const API_KEY = '7b2485ce89eb09a2e33243b3bdadd04b';
+        const BASE_URL = 'https://api.themoviedb.org/3';
+
+        $(document).ready(function () {
+            $('#searchButton').on('click', function () {
+                const movieTitle = $('#movieTitle').val();
+                if (!movieTitle) {
+                    alert('Please enter a movie title.');
+                    return;
+                }
+
+                $.ajax({
+                    url: `${BASE_URL}/search/movie`,
+                    data: { api_key: API_KEY, query: movieTitle },
+                    success: function (response) {
+                        displayMovies(response.results);
+                    },
+                    error: function (err) {
+                        console.error('Error fetching movies:', err);
+                    }
+                });
+            });
+        });
+
+        function displayMovies(movies) {
+            const resultsContainer = $('#results');
+            resultsContainer.empty();
+
+            if (!movies.length) {
+                resultsContainer.html('<p class="text-danger">No movies found.</p>');
+                return;
+            }
+
+            movies.forEach(movie => {
+                const movieCard = `
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">${movie.title}</h5>
+                            <p class="card-text">${movie.overview || 'No description available.'}</p>
+                            <button class="btn btn-primary view-actors" data-id="${movie.id}">View Actors</button>
+                        </div>
+                    </div>
+                `;
+                resultsContainer.append(movieCard);
+            });
+
+            $('.view-actors').on('click', function () {
+                const movieId = $(this).data('id');
+                localStorage.setItem('movieId', movieId);
+                window.location.href = '/MovieSPAKSU/actor.html';
+            });
+        }
+    </script>
 </body>
 </html>
